--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,9 @@
 spring:
   application:
     name: spring
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,beans,env
