--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,3 +7,9 @@ management:
     web:
       exposure:
         include: health,info,beans,env
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: DEBUG
